--- a/themes/bizcraft-hugo/layouts/partials/page-header.html
+++ b/themes/bizcraft-hugo/layouts/partials/page-header.html
@@ -1,5 +1,5 @@
 <div id="banner-area">
-  <img src="{{ .Params.page_header_bg | absURL }}" onerror="this.src='{{`images/banner/banner1.jpg` | absURL}}'" alt="" />
+  <img src="{{ .Params.page_header_bg | absURL }}" onerror="this.src='{{`images/banner/banner-oid.png` | absURL}}'" alt="" />
   <div class="parallax-overlay"></div>
   <!-- Subpage title start -->
   <div class="banner-title-content">
