--- a/themes/bizcraft-hugo/assets/scss/templates/_main.scss
+++ b/themes/bizcraft-hugo/assets/scss/templates/_main.scss
@@ -813,11 +813,11 @@ figure.effect-oscar:hover img {
 	transition: all 300ms ease;
 }
 
-.team-social a.fb:hover {
+.team-social a.facebook:hover {
 	background: #325c94;
 }
 
-.team-social a.twt:hover {
+.team-social a.twitter:hover {
 	background: #00abdc;
 }
 
@@ -825,11 +825,11 @@ figure.effect-oscar:hover img {
 	background: #dd4b39;
 }
 
-.team-social a.linkdin:hover {
+.team-social a.linkedin:hover {
 	background: #007bb6;
 }
 
-.team-social a.dribble:hover {
+.team-social a.website:hover {
 	background: #ea4c89;
 }
 
