Add telegram hover scss

--- a/themes/bizcraft-hugo/assets/scss/templates/_main.scss
+++ b/themes/bizcraft-hugo/assets/scss/templates/_main.scss
@@ -829,6 +829,10 @@ figure.effect-oscar:hover img {
 	background: #007bb6;
 }
 
+.team-social a.telegram:hover {
+	background: #0088cc;
+}
+
 .team-social a.website:hover {
 	background: #ea4c89;
 }
