--- a/themes/bizcraft-hugo/layouts/volunteers/list.html
+++ b/themes/bizcraft-hugo/layouts/volunteers/list.html
@@ -90,6 +90,42 @@
     <!--/ Content row end -->
   </div>
   <!--/ Container end -->
+
+{{ end }}
+{{ with $data.emeritus }}
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 heading">
+        {{ with .emeritus_title_icon }} <span class="title-icon float-left"><i class="fa-solid {{ . }}"></i></span> {{ end }}
+        <h2 class="title">{{ .emeritus_title | markdownify }} <span class="title-desc">{{ .emeritus_subtitle | markdownify }}</span></h2>
+      </div>
+    </div><!-- Title row end -->
+
+    <div class="row text-center">
+      {{ range $index,$elements:= .emeritus_member }}
+      <div class="col-md-3 col-sm-6 mb-5">
+        <div class="team wow fadeInUp" data-wow-delay=".{{mul $index 2}}s">
+          <div class="img-hexagon">
+            <img src="{{ .image | absURL }}" alt="{{ .name | markdownify }}">
+            <span class="img-top"></span>
+            <span class="img-bottom"></span>
+          </div>
+          <div class="team-content">
+            <h3>{{ .name | markdownify }}</h3>
+            <p>{{ .designation | markdownify }}</p>
+            <div class="team-social">
+              {{ range .social }}
+              <a class="{{ .name }}" href="{{ .link | safeURL }}"><i class="fa-brands {{.icon}}"></i></a>
+              {{ end }}
+            </div>
+          </div>
+        </div>
+      </div>
+      {{ end }}
+    </div>
+    <!--/ Content row end -->
+  </div>
+  <!--/ Container end -->
 </section>
 {{ end }}
 
