Enhance Author Page

--- a/themes/bizcraft-hugo/layouts/author/single.html
+++ b/themes/bizcraft-hugo/layouts/author/single.html
@@ -23,7 +23,7 @@
 					<ul class="list-inline">
 						{{ range .Params.Social }}
 						<li class="list-inline-item"><a href="{{ .link | absURL }}">
-							<span class="icon-pentagon wow bounceIn"><i class="fa {{.icon}}"></i></span>
+							<span class="icon-pentagon wow bounceIn"><i class="fa-brands {{.icon}}"></i></span>
 						</a></li>
 						{{ end }}
 					</ul>
