Fix spelling error

--- a/themes/bizcraft-hugo/layouts/speakers/single.html
+++ b/themes/bizcraft-hugo/layouts/speakers/single.html
@@ -27,7 +27,7 @@
             <p> {{ .Params.hometown }} </p>
             <h4>Affiliation</h4>
             <p> {{ .Params.affiliation }} </p>
-            <h4>Languange</h4>
+            <h4>Language</h4>
             <ul>
               {{ range .Params.languange }}
               <li>{{ . }}</li>
