--- a/themes/bizcraft-hugo/layouts/partials/portfolio.html
+++ b/themes/bizcraft-hugo/layouts/partials/portfolio.html
@@ -16,7 +16,7 @@
       <div class="col-12">
         <div class="isotope-nav" data-isotope-nav="isotope">
           <ul>
-            <li><a href="#" class="active" data-filter="*">Last Events</a></li>
+            <li><a href="#" class="active" data-filter="*">All</a></li>
             {{ $categories := slice }}
             {{ range (where .Site.RegularPages "Section" "portfolio") }}
             {{ range .Params.types }}
